--- a/contact.html
+++ b/contact.html
@@ -18,13 +18,13 @@
     <div class="contact-col">
         <h1>CONTACT KRISHNA </h1>
         <div class="contact-row">
-        <p>145 North Ave. <br> Athens, GA 30601</p>
-        <p>(404)-989-0980</p>
+        <p>145 **** ***** <br> Athens, GA *****</p>
+        <p>(404)-***-****</p>
         </div>
     <hr>
     </div>  
     <div class="one-col">
-    <form action="mailto:krishna.mehta26@yahoo.com" method="post">
+    <form method="post">
         Name:<input type="text" required> <br>
         Email: <input type="email" required><br>
         Message: <textarea width="10px" height="10px"></textarea><br>
