--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <h2>"I am trying my best :-)"</h2>
              </div>  
      </section>
+
      <div class="dancingbear">
         <a href="https://youtu.be/37xyXzSyPIU?si=zM0MjcN4IcDw_3NW" target="_blank"> 
         <img src="images/deadbear.gif" alt="dancing bear">
@@ -33,15 +34,14 @@
         <img src="images/deadbear.gif" alt="dancing bear">
         <img src="images/deadbear.gif" alt="dancing bear">
         <img src="images/deadbear.gif" alt="dancing bear">
-        <img src="images/deadbear.gif" alt="dancing bear">
-        <img src="images/deadbear.gif" alt="dancing bear"> 
+
     </a>
      </div>
     <section class="contentpage">
             <img src="images/IMG_4010 3.jpg" alt="Krishna Mehta">
             <h2>Hello World.</h2>
             <p>
-                I am a senior at The University of Georgia majoring in Computer Science. I am interested Full-Stack & UI/UX
+                I am a senior at The University of Georgia majoring in Computer Science. I am interested UI/UX & Full-Stack
                  Web Developemt.
             </p>
             <hr>
@@ -54,9 +54,9 @@
                         <h3>Languages</h3>
                          <ul>
                 <li>Java</li>
-                <li>HTML5</li>
-                <li>CSS3</li>
-                <li>SASS</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
                 <li>Python</li>
                 <li>SQL(MySQL)</li>
                         </ul>
