--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     <div class="contact-col">
         <h1>CONTACT KRISHNA </h1>
         <div class="contact-row">
-        <p>145 **** ***** <br> Athens, GA *****</p>
+        <p>#### **** ***** <br> Athens, GA *****</p>
         <p>(404)-***-****</p>
         </div>
     <hr>
