--- a/index.html
+++ b/index.html
@@ -39,11 +39,9 @@
      </div>
     <section class="contentpage">
             <img src="images/IMG_4010 3.jpg" alt="Krishna Mehta">
-            <h2>Hello World.</h2>
+            <h2>Hello World_</h2>
             <p>
-                I am a senior at The University of Georgia majoring in Computer Science. I am interested UI/UX & Full-Stack
-                 Web Developemt.
-            </p>
+                I am a recent graduate from 🎓 The University of Georgia with a bachelor's degree in Computer Science. I am interested in UI/UX & Front-end web developer with ambitions of becoming a full-stack developer. See my projects <a href="https://github.com/KrishnaM26">here</a>.
             <hr>
             <div class="cpage-col">
                
