--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <img src="images/IMG_4010 3.jpg" alt="Krishna Mehta">
             <h2>Hello World_</h2>
             <p>
-                I am a recent graduate from 🎓 The University of Georgia with a bachelor's degree in Computer Science. I am interested in UI/UX & Front-end web developer with ambitions of becoming a full-stack developer. See my projects <a href="https://github.com/KrishnaM26">here</a>.
+                I am a recent graduate from 🎓 The University of Georgia with a bachelor's degree in Computer Science. I am interested in UI/UX & Front-End Web Development with ambitions of becoming a Full-Stack Developer. See my projects <a href="https://github.com/KrishnaM26">here</a>.
             <hr>
             <div class="cpage-col">
                
@@ -74,7 +74,7 @@
                 <dt>UI/UX design</dt>
                 <dd>⭐️⭐️⭐️⭐️</dd>
                 <dt>Front-end Development</dt>
-                <dd>⭐️⭐️</dd>
+                <dd>⭐️⭐️⭐️</dd>
                 <dt>Back-end Developemt</dt>
                 <dd>⭐️</dd>
                         </dl>
